feat: menu role
