# src/request/models/TypesListRoleData.ts
@@ -1,0 +1,135 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Swagger Example API
+ * This is a sample server celler server.
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: support@swagger.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+/**
+ *
+ * @export
+ * @interface TypesListRoleData
+ */
+export interface TypesListRoleData {
+  /**
+   * 创建人
+   * @type {string}
+   * @memberof TypesListRoleData
+   */
+  createBy: string
+  /**
+   * 创建时间
+   * @type {string}
+   * @memberof TypesListRoleData
+   */
+  createTime: string
+  /**
+   * 是否删除  -1：已删除  0：正常
+   * @type {number}
+   * @memberof TypesListRoleData
+   */
+  delFlag: number
+  /**
+   * 编号
+   * @type {number}
+   * @memberof TypesListRoleData
+   */
+  id: number
+  /**
+   * 更新人
+   * @type {string}
+   * @memberof TypesListRoleData
+   */
+  lastUpdateBy: string
+  /**
+   * 更新时间
+   * @type {string}
+   * @memberof TypesListRoleData
+   */
+  lastUpdateTime: string
+  /**
+   * 角色名称
+   * @type {string}
+   * @memberof TypesListRoleData
+   */
+  name: string
+  /**
+   * 备注
+   * @type {string}
+   * @memberof TypesListRoleData
+   */
+  remark: string
+  /**
+   * 状态
+   * @type {number}
+   * @memberof TypesListRoleData
+   */
+  status: number
+}
+
+/**
+ * Check if a given object implements the TypesListRoleData interface.
+ */
+export function instanceOfTypesListRoleData(value: object): boolean {
+  let isInstance = true
+  isInstance = isInstance && 'createBy' in value
+  isInstance = isInstance && 'createTime' in value
+  isInstance = isInstance && 'delFlag' in value
+  isInstance = isInstance && 'id' in value
+  isInstance = isInstance && 'lastUpdateBy' in value
+  isInstance = isInstance && 'lastUpdateTime' in value
+  isInstance = isInstance && 'name' in value
+  isInstance = isInstance && 'remark' in value
+  isInstance = isInstance && 'status' in value
+
+  return isInstance
+}
+
+export function TypesListRoleDataFromJSON(json: any): TypesListRoleData {
+  return TypesListRoleDataFromJSONTyped(json, false)
+}
+
+export function TypesListRoleDataFromJSONTyped(json: any, ignoreDiscriminator: boolean): TypesListRoleData {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    createBy: json['createBy'],
+    createTime: json['createTime'],
+    delFlag: json['delFlag'],
+    id: json['id'],
+    lastUpdateBy: json['lastUpdateBy'],
+    lastUpdateTime: json['lastUpdateTime'],
+    name: json['name'],
+    remark: json['remark'],
+    status: json['status'],
+  }
+}
+
+export function TypesListRoleDataToJSON(value?: TypesListRoleData | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    createBy: value.createBy,
+    createTime: value.createTime,
+    delFlag: value.delFlag,
+    id: value.id,
+    lastUpdateBy: value.lastUpdateBy,
+    lastUpdateTime: value.lastUpdateTime,
+    name: value.name,
+    remark: value.remark,
+    status: value.status,
+  }
+}
