# src/request/models/TypesListRoleResp.ts
@@ -1,0 +1,120 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Swagger Example API
+ * This is a sample server celler server.
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: support@swagger.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import type { TypesListRoleData } from './TypesListRoleData'
+import { TypesListRoleDataFromJSON, TypesListRoleDataFromJSONTyped, TypesListRoleDataToJSON } from './TypesListRoleData'
+
+/**
+ *
+ * @export
+ * @interface TypesListRoleResp
+ */
+export interface TypesListRoleResp {
+  /**
+   *
+   * @type {string}
+   * @memberof TypesListRoleResp
+   */
+  code: string
+  /**
+   *
+   * @type {number}
+   * @memberof TypesListRoleResp
+   */
+  current: number
+  /**
+   *
+   * @type {Array<TypesListRoleData>}
+   * @memberof TypesListRoleResp
+   */
+  data: Array<TypesListRoleData>
+  /**
+   *
+   * @type {string}
+   * @memberof TypesListRoleResp
+   */
+  message: string
+  /**
+   *
+   * @type {number}
+   * @memberof TypesListRoleResp
+   */
+  pageSize: number
+  /**
+   *
+   * @type {boolean}
+   * @memberof TypesListRoleResp
+   */
+  success: boolean
+  /**
+   *
+   * @type {number}
+   * @memberof TypesListRoleResp
+   */
+  total: number
+}
+
+/**
+ * Check if a given object implements the TypesListRoleResp interface.
+ */
+export function instanceOfTypesListRoleResp(value: object): boolean {
+  let isInstance = true
+  isInstance = isInstance && 'code' in value
+  isInstance = isInstance && 'current' in value
+  isInstance = isInstance && 'data' in value
+  isInstance = isInstance && 'message' in value
+  isInstance = isInstance && 'pageSize' in value
+  isInstance = isInstance && 'success' in value
+  isInstance = isInstance && 'total' in value
+
+  return isInstance
+}
+
+export function TypesListRoleRespFromJSON(json: any): TypesListRoleResp {
+  return TypesListRoleRespFromJSONTyped(json, false)
+}
+
+export function TypesListRoleRespFromJSONTyped(json: any, ignoreDiscriminator: boolean): TypesListRoleResp {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    code: json['code'],
+    current: json['current'],
+    data: (json['data'] as Array<any>).map(TypesListRoleDataFromJSON),
+    message: json['message'],
+    pageSize: json['pageSize'],
+    success: json['success'],
+    total: json['total'],
+  }
+}
+
+export function TypesListRoleRespToJSON(value?: TypesListRoleResp | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    code: value.code,
+    current: value.current,
+    data: (value.data as Array<any>).map(TypesListRoleDataToJSON),
+    message: value.message,
+    pageSize: value.pageSize,
+    success: value.success,
+    total: value.total,
+  }
+}
